Release CMTK-1.3.1:

- Configuration/build: when system zlib is installed, we use it instead of the
    bundled zlib. This is necessary to avoid version issues when Qt support is
    activated, because Qt is linked against the system zlib.
- Distribution: updated version of bundled zlib to 1.2.5, which fixes valgrind
    warnings among other things. In the process, fixed a configuration file
    bug by which the system zconf.h file, if present, was included rather than
    the one configured for CMTK.
- Fixed: in some cases, TypedArray memory was allocated via malloc() but freed
    via delete[]. Now everything is consistently using cmtk::Memory (wraps
    new{} and delete[]) for allocation and deallocation.
- Fixed: Correlation Ratio similarity measure was broken due to imcomplete
    copying of class fields in HistogramBase class. This was resolved
    "accidentally" when unifying and standardizing all copy constructors and
    assignment operators.
- Refactored: non-standard copy member functions in various classes have been
    standardized as operator=() members. Assignment operators and copy
    constructors that performed only member-wise copies were deleted
    altogether.
- API: renamed "InfinitePlane" class to "ParametricPlane" which is more
    descriptive and precise.
- Added: CMake configuration of CUDA and OpenCL support for future GPU
    computations. Currently unused and experimental.
- Refactored: UniformDistanceMap is now a factory class and no longer directly
    inherits from UniformVolume.
- API: renamed "GetDownsampled" member in DataGrid and UniformVolume classes
    to "GetDownsampledAndAveraged" to clarify that this is a
    downsampling-and-averaging operation, not just a downsampling.
- Refactored: greatly improved handling of grid index and region types.
- Added: SmartConstPointer, based on concepts in Meyer's "More Effective C++"
    book.
- Removed: unused classes from the deprecated "Pipeline" library