@@ -1,6 +1,6 @@
 /*
 //
-//  Copyright 1997-2009 Torsten Rohlfing
+//  Copyright 1997-2010 Torsten Rohlfing
 //
 //  Copyright 2004-2010 SRI International
 //
@@ -50,6 +50,7 @@
 #include <cmtkImageOperationApplyMask.h>
 #include <cmtkImageOperationErodeDilate.h>
 #include <cmtkImageOperationBoundaryMap.h>
+#include <cmtkImageOperationConnectedComponents.h>
 #include <cmtkImageOperationDownsample.h>
 #include <cmtkImageOperationHistogramEqualization.h>
 #include <cmtkImageOperationCropRegion.h>
@@ -152,6 +153,8 @@ main( int argc, char* argv[] )
     cl.AddCallback( Key( "revert" ), &cmtk::ImageOperationRevert::New, "Revert a binary mask, i.e., exchange foreground and background." );
     cl.AddCallback( Key( "erode" ), &cmtk::ImageOperationErodeDilate::NewErode, "Morphological erosion operator" );
     cl.AddCallback( Key( "dilate" ), &cmtk::ImageOperationErodeDilate::NewDilate, "Morphological dilation operator" );
+    cl.AddCallback( Key( "connected-components" ), &cmtk::ImageOperationConnectedComponents::New, "Create connected components map" );
+    cl.AddCallback( Key( "connected-components-sort" ), &cmtk::ImageOperationConnectedComponents::NewSorted, "Create connected components map with components sorted by increasing size" );
     cl.AddCallback( Key( "boundary-map" ), &cmtk::ImageOperationBoundaryMap::New, "Create boundary map" );
     cl.AddCallback( Key( "multi-boundary-map" ), &cmtk::ImageOperationBoundaryMap::NewMulti, "Create multi-valued boundary map" );
 
